= Hitobito Changelog

== Version 1.11

* Pro Ebene aktivierbare Zugriffsanfragen, falls Personen zu einer fremden Gruppe, Anlass oder Abo hinzugefügt werden.

== Version 1.10

* Schnelleres Laden der Seiten dank Turbolinks und Kompression.
* Tooltips bei langen Gruppennamen.
* Letzte bearbeitende Person von Anlässen wird gespeichert.
* Anlass Formular in mehrere Tabs aufgeteilt.

== Version 1.9

* Land ist neu ein Auswahlfeld.
* Kursarten haben zusätzliche Text Felder 'Generelle Informationen' und 'Aufnahmebedingungen'.
* Kurse haben zusätzliches Text Feld 'Aufnahmebedingungen'.
* Möglichkeit, bei einer PDF Kursanmeldung eine Unterschrift einzufordern.
* Überarbeitetes Layout der PDF Kursanmeldung.
* Nicht erfüllte Aufnahmebedingungen werden bei einer Teilnahme angezeigt. Eine Anmeldung ist trotzdem möglich.
* Beim Hinzufügen zur Kurs Warteliste kann neu ein Kommentar eingegeben werden.
* Möglichkeit, Personen aufgrund ihrer Qualifikationen zu filtern.
* Beim Schreiben auf eine Mailing Liste können neu ebenfalls die zusätzlichen E-Mail Adressen sowie die E-Mail Adressen der Gruppe als Absender verwendet werden.
* Neue Grundberechtigungen für eine Gruppe und alle darunter liegenden Gruppen.
* Unterstützung für Deployment auf Openshift v2.

== Version 1.8

* Möglichkeit, den Zugriff auf Anlässe und Kurse unterschiedlich zu berechtigen.

== Version 1.7

* Möglichkeit beliebige Absender auf Mailinglisten zuzulassen.
* Unterstützung von internationalen Postleitzahlen.
* Echtzeitvalidierung der Von-/Bis-Daten bei Anlässen.
* Hinweis mit Details über die Aktion bei 'Login verschicken'.

== Version 1.6

* Anzeige der Anzahl gefundenen und nicht sichtbaren Personen auf Personenlisten.
* Anzeige von beliebigen Informationen beim Login Formular.
* Beschränkung der Gruppen / Rollen bei Abos auf Gruppe und Untergruppen.

== Version 1.5

* Rollen in Anlässen können geändert werden.
* CSV Import erkennt Auswahlwerte in der aktuellen Sprache (z.B. ja/nein anstelle 1/0).