@@ -1,0 +1,18 @@
+-#  Copyright (c) 2015, Pro Natura Schweiz. This file is part of
+-#  hitobito and licensed under the Affero General Public License version 3
+-#  or later. See the COPYING file at the top-level directory or at
+-#  https://github.com/hitobito/hitobito.
+
+%li{id: dom_id(attachment)}
+  = link_to(attachment.file_identifier, attachment.file_url, target: :blank)
+  
+  - if can?(:update, @event)
+    &nbsp;
+    = link_to icon(:trash),
+              group_event_attachment_path(@group, @event, attachment),
+              class: 'action',
+              title: ti(:"link.delete"),
+              alt: ti(:"link.delete"),
+              data: { confirm: ti(:confirm_delete),
+                      method: :delete,
+                      remote: true }
