@@ -1,0 +1,9 @@
+-#  Copyright (c) 2015, Pro Natura Schweiz. This file is part of
+-#  hitobito and licensed under the Affero General Public License version 3
+-#  or later. See the COPYING file at the top-level directory or at
+-#  https://github.com/hitobito/hitobito.
+
+- if @attachment.destroyed?
+  $('ul#attachments li##{dom_id(@attachment)}').remove()
+- else
+  alert('#{t('.failure', errors: @attachment.errors.full_messages.join(', '))}');
