@@ -1,0 +1,25 @@
+-#  Copyright (c) 2015, Pro Natura Schweiz. This file is part of
+-#  hitobito and licensed under the Affero General Public License version 3
+-#  or later. See the COPYING file at the top-level directory or at
+-#  https://github.com/hitobito/hitobito.
+
+- if can?(:update, @event) || @event.attachments.exists?
+  %dl.dl-horizontal
+    = labeled(Event::Attachment.model_name.human(count: 2)) do
+      %ul.unstyled#attachments
+        - @event.attachments.list.each do |a|
+          = render a
+
+        - if can?(:update, @event)
+          %li.form
+            = spinner
+            = form_for(@event.attachments.new,
+                       url: group_event_attachments_path(@group, @event),
+                       html: { multipart: true,
+                               style: 'margin-bottom: 0;',
+                               data: { remote: true, spin: true } }) do |f|
+              %span.custom-file
+                = link_to(icon(:plus) + ' ' + t('.add'), '#', class: 'green')
+                = f.file_field(:file,
+                               accept: Event::AttachmentUploader.accept_extensions,
+                               data: { submit: true })
