@@ -1,3 +1,8 @@
+-#  Copyright (c) 2012-2015, Jungwacht Blauring Schweiz. This file is part of
+-#  hitobito and licensed under the Affero General Public License version 3
+-#  or later. See the COPYING file at the top-level directory or at
+-#  https://github.com/hitobito/hitobito.
+
 .well
   %dl.dl-horizontal
     = labeled_attr(entry, :dates_full)
@@ -24,3 +29,5 @@
   = render_present_attrs(entry, :description, :location)
 
   = render_extensions :attrs_primary, folder: 'events'
+
+  = render 'attachments'
