@@ -5,7 +5,7 @@
 
 = field_set_tag do
   = f.labeled :picture do
-    = f.file_field :picture, type: :file
+    = f.file_field :picture, type: :file, accept: Person::PictureUploader.accept_extensions
 
   - if entry.picture.present?
     = f.labeled :remove_picture do
