@@ -115,6 +115,9 @@ de:
       event/application:
         one: Anmeldung
         other: Anmeldungen
+      event/attachment:
+        one: Anhang
+        other: 'Anhänge'
       event/kind:
         one: Kursart
         other: Kursarten
@@ -304,6 +307,9 @@ de:
         priority_2_id: "1. Ausweichkurs"
         priority_3_id: "2. Ausweichkurs"
         waiting_list_comment: 'Bemerkung'
+
+      event/attachment:
+        file: Datei
 
       event/course:
         kind_id: Kursart
@@ -519,7 +525,9 @@ de:
       after: "muss  nach %{restriction} sein"
       on_or_after: "muss %{restriction} oder danach sein"
       # carrierwave
-      extension_white_list_error: "kann nur Dateien der Typen %{allowed_types} verarbeiten."
+      extension_white_list_error: "akzeptiert nur die folgenden Dateitypen: %{allowed_types}"
+      dimensions_too_large: "akzeptiert nur Bilder mit einer Grösse kleiner als %{maximum} Pixel"
+      filesize_too_large: "darf nicht grösser als %{maximum} MB sein"
       # devise
       expired: "ist abgelaufen, bitte neu anfordern"
       not_found: "nicht gefunden"
