@@ -117,3 +117,8 @@ role:
 people:
   # either name or role
   default_sort: name
+
+event:
+  attachments:
+    file_extensions: jpg jpeg gif png pdf txt rtf doc docx xls xlsx ppt pptx odt ods odp zip
+    max_file_size: 10 # MB
