@@ -1,4 +1,13 @@
 # encoding: utf-8
+# == Schema Information
+#
+# Table name: person_add_request_ignored_approvers
+#
+#  id        :integer          not null, primary key
+#  group_id  :integer          not null
+#  person_id :integer          not null
+#
+
 
 #  Copyright (c) 2012-2015, Pfadibewegung Schweiz. This file is part of
 #  hitobito and licensed under the Affero General Public License version 3
