@@ -3,6 +3,7 @@
 == Version 1.11
 
 * Pro Ebene aktivierbare Zugriffsanfragen, falls Personen zu einer fremden Gruppe, Anlass oder Abo hinzugefügt werden.
+* Bei Anlässen können Dateien angehängt werden, welche für alle einsehbar sind.
 
 == Version 1.10
 
